Actions
Bug #12615
closedtodds1337: NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Build errors on SPARC with NULL pointers:
../../sun4u/io/todds1337.c: In function 'todds1337_setup_prom': ../../sun4u/io/todds1337.c:923: error: comparison between pointer and integer
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 3dddd038560f12863d73bf754e6534d071a45610
commit 3dddd038560f12863d73bf754e6534d071a45610 Author: Toomas Soome <tsoome@me.com> Date: 2020-05-10T07:54:43.000Z 12615 todds1337: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>
Actions