12615 todds1337: NULL pointer errors Reviewed by: Gergő Doma <domag02@gmail.com> Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Peter Tribble <peter.tribble@gmail.com> Reviewed by: Patrick Mooney <pmooney@pfmooney.com> Approved by: Gordon Ross <gordon.w.ross@gmail.com>